@@ -6,10 +6,15 @@ This is the bare bones of the Netzke framework. Use it to build your own widgets
 The idea behind the Netzke framework is that it allows you write reusable client/server code. Create a widget, and then embed it (or load it dynamically) into your Ext-based applications or HTML pages. For more info, see the links below.
 
 == Instalation
-  
+The gem is hosted on gemcutter. If you haven't yet enabled gemcutter, run the following:
+
+    sudo gem install gemcutter && gem tumble
+
+Install the gem 
+
     sudo gem install netzke-core
     
-If you want the most recent changes, install this as a plugin:
+If you want to experiment with the most recent changes, install this as a plugin:
 
     script/plugin install git://github.com/skozlov/netzke-core.git
     
